--- a/demo/src/main/webapp/food_order.css
+++ b/demo/src/main/webapp/food_order.css
@@ -1,36 +1,67 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 
-*{
-    margin:0px;
-    padding:0px;
+a {
+    padding-right: 85px;
+    color: rgb(255, 255, 255);
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 18px;
 }
-a
+a:hover
 {
-    padding-right:180px;
-    color:rgba(255, 0, 0, 0.8);
-    font-family:'Source Sans Pro', sans-serif;
-    font-size:18px;
+    color:indianred;
 }
-.navy
-{
-    background-color: rgba(0, 0, 0, 0.87);
-    width:100%;
-    height:30px;
+.navy {
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 30px;
 }
-.name
-{
-    /*text-align:center;*/
+
+.logo {
+    height: 80px;
+    width: 100px;
 }
-.logo
-{
-    height:80px;
-    width:100px;
-}
-.head{
+
+.head {
     display: inline-block;
 }
 
-.name{
+.name {
     display: inline-block;
     box-sizing: border-box;
     color: rgba(255, 0, 0, 0.8);
 }
+.container {
+    margin-top: 20px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    background-color: #f7f7f7;
+}
+
+.para {
+    margin-top: 20px;
+    text-align: center;
+}
+body{
+    background-image: url("food_street.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+}
+.back
+{
+    padding-top:200px;
+    padding-left:200px;
+}
+button
+{
+    background-color: rgba(0, 0, 0, 0.6);
+    color:white;
+    border:1px solid yellow;
+    font-size:20px;
+    padding-left:10px;
+}
+
