some major changes

--- a/demo/src/main/webapp/menu.css
+++ b/demo/src/main/webapp/menu.css
@@ -14,46 +14,66 @@ body
     height:40px;
     padding-left:350px;
 }
-a
+.nav a
 {
     color:white;
     padding-left:100px;
 }
-.samosa
-{
-border:1px solid black;
-    height:270px;
-    width:260px;
-}
-.cucumbershrimp
-{
-    border:1px solid black;
-    width:260px;
-}
-.cucumbershrimp img
-{
-    height:270px;
-    width:260px;
-}
-.ap3
-{
-    border:1px solid black;
-    width:260px;
-}
-.ap3 img
-{
-    height:270px;
-    width:260px;
-}
-.ap4
-{
-    border:1px solid black;
-    width:260px;
-}
-.ap4 img
-{
-    height:270px;
-    width:260px;
+div.gallery {
+    border: 1px solid #ccc;
 }
 
+div.gallery:hover {
+    border: 1px solid #777;
+}
 
+div.gallery img {
+    width: 100%;
+}
+div.desc {
+    padding:5px;
+    text-align: center;
+}
+* {
+    box-sizing: border-box;
+}
+.responsive {
+    padding: 0 6px;
+    float: left;
+    width: 24.99999%;
+}
+@media only screen and (max-width: 700px) {
+    .responsive {
+        width: 49.99999%;
+        margin: 6px 0;
+    }
+}
+@media only screen and (max-width: 500px) {
+    .responsive {
+        width: 100%;
+    }
+}
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+.rupees
+{
+    float:left;
+}
+.add
+{
+    float:right;
+}
+.for_img img
+{
+    height:200px;
+    width:400px;
+}
+.gap
+{
+    height:100px;
+    padding-top:100px;
+    width:200px;
+}
